--- a/webpack-demo_v4_SASS/package.json
+++ b/webpack-demo_v4_SASS/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\"&& exit 1",
 		"develop": "webpack --mode development --watch",
+		"prebuild": "node-sass --include-path scss ./src/sass/company-style.scss   dist/company-style.css",
 		"build": "webpack --mode production"
 	},
 	"keywords": [],
@@ -20,6 +21,7 @@
 		"file-loader": "^2.0.0",
 		"lodash-es": "^4.17.11",
 		"node-sass": "^4.9.3",
+		"nodemon": "^1.18.4",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.0",
 		"webpack": "^4.19.1",
