add node-sass in build process

--- a/webpack-demo_v4_SASS/package.json
+++ b/webpack-demo_v4_SASS/package.json
@@ -9,6 +9,9 @@
 		"prebuild": "node-sass --include-path scss ./src/sass/company-style.scss   dist/company-style.css",
 		"build": "webpack --mode production"
 	},
+	"backup-scripts": {
+		"prebuild": "node-sass --include-path scss ./src/sass/company-style.scss   dist/company-style.css"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
