--- a/webpack-demo_v4_SASS/package.json
+++ b/webpack-demo_v4_SASS/package.json
@@ -6,7 +6,6 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\"&& exit 1",
 		"develop": "webpack --mode development --watch",
-		"prebuild": "node-sass --include-path scss ./src/sass/company-style.scss   dist/company-style.css",
 		"build": "webpack --mode production"
 	},
 	"backup-scripts": {
@@ -23,6 +22,7 @@
 		"css-loader": "^1.0.0",
 		"file-loader": "^2.0.0",
 		"lodash-es": "^4.17.11",
+		"mini-css-extract-plugin": "^0.4.3",
 		"node-sass": "^4.9.3",
 		"nodemon": "^1.18.4",
 		"sass-loader": "^7.1.0",
